--- a/st_flask/static/style.css
+++ b/st_flask/static/style.css
@@ -608,6 +608,23 @@ table tbody td {
     top: 5px;
     right: 5px;
 }
+.marker-cluster-small {
+  background-color: rgba(0, 128, 0, 0.6); /* green */
+  border: 2px solid #006400;
+  color: white;
+}
+
+.marker-cluster-medium {
+  background-color: rgba(255, 165, 0, 0.6); /* orange */
+  border: 2px solid #cc8400;
+  color: white;
+}
+
+.marker-cluster-large {
+  background-color: rgba(220, 20, 60, 0.7); /* red */
+  border: 2px solid #b30000;
+  color: white;
+}
 
 
 
